Fixed spacing between image gallery indicators
Minifying the HTML in production eliminates the spacing between them so they need a margin to preserve it.

--- a/static/css/pages/_project-page.scss
+++ b/static/css/pages/_project-page.scss
@@ -69,6 +69,10 @@ $image-max-height: ($max-content-width * 0.75);
     }
   }
 
+  .image-gallery-indicator + .image-gallery-indicator {
+    margin-left: 5px;
+  }
+
   .active,
   .active:hover {
     background: #ffffff;
